--- a/design-document/document.tex
+++ b/design-document/document.tex
@@ -25,7 +25,7 @@
 }
 \author{
     Raphael Habichler\thanks{student-id: 12419578} \and
-    Author Two\thanks{email2@example.com} \and
+    Mark Sesko\thanks{student-id: 12114879} \and
     Author Three\thanks{email3@example.com}
 }
 \date{\today}
