--- a/design-document/document.tex
+++ b/design-document/document.tex
@@ -21,10 +21,10 @@
 \rfoot{Page \thepage}
 
 \title{
-    \vspace{2cm}
-    \textbf{Advanced Information Retrieval}\\[0.5cm]
-    \large Fine-Tuning and Transferability in Legal Information Retrieval\\[0.5cm]
-    \normalsize Group Number: 27\\[1cm]
+    \vspace{-2.5cm}
+    \textbf{Advanced Information Retrieval}\\[0.2cm]
+    \large Fine-Tuning and Transferability in Legal Information Retrieval\\[0.2cm]
+    \normalsize Group Number: 27\\[0.3cm]
 }
 \author{
     Raphael Habichler\thanks{student-id: 12419578, Role: Data Processing \& Fine-tuning} \and
@@ -53,22 +53,31 @@ Our focus is on fine-tuning a state-of-the-art embedding model (Qwen3-Embedding-
 \section{Dataset and Processing}
 \subsection{Data Sources}
 \begin{itemize}
-    \item \textbf{Austrian Law Data}: Legal documents and case law from Austrian jurisdiction
-    \item \textbf{German Law Data}: GerDaLIR dataset \cite{wrzalik-krechel-2021-gerdalir} and German legal corpus \cite{9723721}
-    \item \textbf{Chinese Law Data}: LeCaRDv2 dataset \cite{li2023lecardv2}
+    \item \textbf{Austrian Law Data}: Synthetic dataset created from Austrian legal documents. Since no pre-labeled query-document pairs exist, we generate queries using LLMs to create evaluation pairs.
+    \item \textbf{German Law Data}: GerDaLIR dataset \cite{wrzalik-krechel-2021-gerdalir} and German legal corpus \cite{9723721} with pre-labeled query-document pairs for fine-tuning and evaluation.
+    \item \textbf{Chinese Law Data}: LeCaRDv2 dataset \cite{li2023lecardv2} with existing query-document annotations.
 \end{itemize}
 
 \subsection{Processing}
-Data preprocessing includes text normalization, document segmentation, and creation of query-document pairs for training and evaluation purposes.
+Data preprocessing includes text normalization, document segmentation, and query-document pair preparation. For Austrian data, we synthetically generate queries from legal documents to create the evaluation dataset.
 
 \section{Methods and Models}
 We use the Qwen3-Embedding-8B model \cite{qwen3embedding} and compare two experimental conditions:
 \begin{enumerate}
     \item \textbf{Baseline}: Pre-trained Qwen3-Embedding-8B evaluated directly on all three jurisdictions
-    \item \textbf{Fine-tuned}: Model fine-tuned on German domain-specific dataset, then evaluated on all three jurisdictions
+    \item \textbf{Fine-tuned}: Model fine-tuned specifically on German domain-specific dataset, then evaluated on all three jurisdictions to assess transfer learning
 \end{enumerate}
 
-The fine-tuning process uses cosine-loss similarity for training. Query and document texts are encoded and pooled, then their cosine similarity is computed. This trains the model to produce embeddings where relevant query-document pairs have high similarity.
+\subsection{Fine-tuning Process}
+The fine-tuning procedure adapts the pre-trained model to legal domain:
+\begin{itemize}
+    \item \textbf{Training data}: German legal query-document pairs from GerDaLIR dataset
+    \item \textbf{Loss function}: Cosine similarity loss that maximizes similarity between relevant query-document pairs and minimizes similarity for irrelevant pairs
+    \item \textbf{Architecture}: Both queries and documents are independently encoded through the embedding model, then pooled to create fixed-size vector representations
+    \item \textbf{Objective}: Learn embeddings where semantically related legal texts are closer in vector space
+\end{itemize}
+
+This domain-adapted model is then tested on Austrian (synthetic) and Chinese legal data to measure how well legal knowledge transfers across jurisdictions and languages.
 
 \section{Evaluation}
 We measure retrieval performance using standard information retrieval metrics:
