--- a/design-document/document.tex
+++ b/design-document/document.tex
@@ -21,7 +21,7 @@
 \rfoot{Page \thepage}
 
 \title{
-    \vspace{-2.5cm}
+    \vspace{-2cm}
     \textbf{Advanced Information Retrieval}\\[0.2cm]
     \large Fine-Tuning and Transferability in Legal Information Retrieval\\[0.2cm]
     \normalsize Group Number: 27\\[0.3cm]
@@ -43,7 +43,7 @@
 This project investigates the transferability of domain-specific fine-tuned embedding models across different legal jurisdictions. We fine-tune the Qwen3-Embedding-8B model on German legal data and evaluate its performance on Austrian, German, and Chinese legal corpora to assess cross-jurisdictional knowledge transfer.
 
 \section{Idea and Goal}
-\textbf{Research Question}: Can a legal embedding model fine-tuned on German law effectively retrieve relevant documents in other jurisdictions (Austrian and Chinese law)?
+Research Question: Can a legal embedding model fine-tuned on German law effectively retrieve relevant documents in other jurisdictions (Austrian and Chinese law)?
 
 The goal is to build legal information retrieval systems that work across multiple jurisdictions without requiring extensive training data for each legal system. This addresses the challenge of cross-jurisdictional legal search and comparative law analysis.
 
@@ -52,41 +52,32 @@ Our focus is on fine-tuning a state-of-the-art embedding model (Qwen3-Embedding-
 
 \section{Dataset and Processing}
 \subsection{Data Sources}
-\begin{itemize}
-    \item \textbf{Austrian Law Data}: Synthetic dataset created from Austrian legal documents. Since no pre-labeled query-document pairs exist, we generate queries using LLMs to create evaluation pairs.
-    \item \textbf{German Law Data}: GerDaLIR dataset \cite{wrzalik-krechel-2021-gerdalir} and German legal corpus \cite{9723721} with pre-labeled query-document pairs for fine-tuning and evaluation.
-    \item \textbf{Chinese Law Data}: LeCaRDv2 dataset \cite{li2023lecardv2} with existing query-document annotations.
-\end{itemize}
+We use three legal datasets from different jurisdictions. 
+The Austrian Law Data is a synthetic dataset created from Austrian legal documents. Since no pre-labeled query-document pairs exist, we generate queries using LLMs to create evaluation pairs. 
+The German Law Data consists of the GerDaLIR dataset \cite{wrzalik-krechel-2021-gerdalir} and German legal corpus \cite{9723721} with pre-labeled query-document pairs for fine-tuning and evaluation. 
+The Chinese Law Data uses the LeCaRDv2 dataset \cite{li2023lecardv2} with existing query-document annotations.
 
 \subsection{Processing}
-Data preprocessing includes text normalization, document segmentation, and query-document pair preparation. For Austrian data, we synthetically generate queries from legal documents to create the evaluation dataset.
+Data preprocessing includes text normalization, document segmentation, and query-document pair preparation. 
+For Austrian data, we synthetically generate queries from legal documents to create the evaluation dataset.
 
 \section{Methods and Models}
-We use the Qwen3-Embedding-8B model \cite{qwen3embedding} and compare two experimental conditions:
-\begin{enumerate}
-    \item \textbf{Baseline}: Pre-trained Qwen3-Embedding-8B evaluated directly on all three jurisdictions
-    \item \textbf{Fine-tuned}: Model fine-tuned specifically on German domain-specific dataset, then evaluated on all three jurisdictions to assess transfer learning
-\end{enumerate}
+We use the Qwen3-Embedding-8B model \cite{qwen3embedding} and compare two experimental conditions. 
+The baseline uses the pre-trained Qwen3-Embedding-8B evaluated directly on all three jurisdictions. 
+The fine-tuned approach adapts the model specifically on the German domain-specific dataset, then evaluates it on all three jurisdictions to assess transfer learning.
 
 \subsection{Fine-tuning Process}
-The fine-tuning procedure adapts the pre-trained model to legal domain:
-\begin{itemize}
-    \item \textbf{Training data}: German legal query-document pairs from GerDaLIR dataset
-    \item \textbf{Loss function}: Cosine similarity loss that maximizes similarity between relevant query-document pairs and minimizes similarity for irrelevant pairs
-    \item \textbf{Architecture}: Both queries and documents are independently encoded through the embedding model, then pooled to create fixed-size vector representations
-    \item \textbf{Objective}: Learn embeddings where semantically related legal texts are closer in vector space
-\end{itemize}
-
+The fine-tuning procedure adapts the pre-trained model to the legal domain using German legal query-document pairs from the GerDaLIR dataset. 
+We employ a cosine similarity loss function that maximizes similarity between relevant query-document pairs and minimizes similarity for irrelevant pairs. 
+Both queries and documents are independently encoded through the embedding model, then pooled to create fixed-size vector representations. 
+The objective is to learn embeddings where semantically related legal texts are closer in vector space. 
 This domain-adapted model is then tested on Austrian (synthetic) and Chinese legal data to measure how well legal knowledge transfers across jurisdictions and languages.
 
 \section{Evaluation}
-We measure retrieval performance using standard information retrieval metrics:
-\begin{itemize}
-    \item \textbf{Precision@k}: Proportion of relevant documents in top-k results
-    \item \textbf{Recall@k}: Proportion of all relevant documents found in top-k results
-    \item \textbf{nDCG@k}: Normalized Discounted Cumulative Gain, accounting for ranking quality
-\end{itemize}
-
+We measure retrieval performance using standard information retrieval metrics. 
+Precision@k measures the proportion of relevant documents in the top-k results. 
+Recall@k captures the proportion of all relevant documents found in the top-k results. 
+nDCG@k (Normalized Discounted Cumulative Gain) accounts for ranking quality by giving higher weight to correctly ranked relevant documents. 
 Performance is compared between the baseline and fine-tuned models across all three jurisdictions to quantify transferability.
 
 \section{Workflow}
